src/test/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/type-alias-impl-trait-with-cycle-error.rs:3:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: could not find defining uses
  --> $DIR/type-alias-impl-trait-with-cycle-error.rs:6:12
   |
LL | type Foo = impl Fn() -> Foo;
   |            ^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

